# cf-frp-traefik-mesh-wizard

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  LEGAL.md  LICENSE  QUICKSTART.md  README.md  README.ru.md  SECURITY.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  security.yml
examples/: homelab-k3s-with-mail.yaml  multi-vps-k3s-lan.yaml  simple-single-vps.yaml
schema/: mesh-schema.yaml
scripts/: format.sh  lint.sh  perf_check.sh  security_scan.sh
src/ai_providers/: __init__.py  base.py  mock_provider.py  openai_provider.py
src/mesh_wizard/: __init__.py  cli.py  loader.py  model.py  schema_validator.py
src/mesh_wizard/ai/: ha_suggestions.py  topology_nl_to_yaml.py
src/mesh_wizard/generators/: cloudflare_generator.py  diagram_generator.py  frp_client_generator.py  frp_server_generator.py  traefik_dynamic_generator.py  traefik_static_generator.py
tests/integration/: test_full_generation_multi_segment.py  test_full_generation_simple_topology.py
tests/unit/: test_ai_adapters.py  test_cli_basic.py  test_cloudflare_generator.py  test_diagram_generator.py  test_frp_generators.py  test_loader.py  test_model.py  test_schema_validator.py  test_traefik_generators.py
